# kendra-custom-box-connector

./: .env.sample  .gitignore  README.md  compose.yml  pyproject.toml
box_connector/: Dockerfile  box.py  box_crawler.py  config.py  event_handler.py  models.py  requirements.txt  s3_writer.py  utils.py
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: kendra-box-connector-stack.ts
cdk/lib/constructs/: box-connector.ts  database.ts  kendra-index.ts  kendra-s3-data-source.ts
cdk/test/: kendra-box-connector.test.ts
docs/: 10_DEPLOYMENT.md  20_INITIAL_IMPORT.md  20_INITIAL_MIGRATION.md  30_USING_KENDRA.md
functions/box_connector/: acl.py  config.py  index.py  models.py  requirements.txt
scripts/: initial_migrate.py  sample_query.py  scripts_config.py  scripts_config.sample.py
tests/: conftest.py  test_file_events.py
tests/box_connector/: test_file_events.py  test_folder_events.py
