[project]
name = "kendra-box-connector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tomoya Kudo", email = "kudtomoy@amazon.co.jp" }
]
dependencies = [
    "aws-lambda-powertools>=2.43.1",
    "boto3>=1.35.11",
    "box-sdk-gen[jwt]>=1.5.1",
    "pynamodb>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-env>=1.1.3",
    "pytest-mock>=3.14.0",
    "moto>=5.0.14",
    "ruff>=0.6.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["functions/box_connector", "scripts"]

[tool.pytest.ini_options]
pythonpath = "functions/box_connector"
testpaths = ["tests"]
env = [
    "ITEM_TABLE=item-table",
    "COLLABORATION_TABLE=collaboration-table",
    "BUCKET_NAME=test-bucket",
]
